Fix screen flickering on mobile devices
Fix scrollElement on Safari
Minor performance improvements

--- a/src/app/components/PageSection.module.scss
+++ b/src/app/components/PageSection.module.scss
@@ -138,6 +138,11 @@ $divsize: 25px;
 }
 
 @include mq-phones {
+    .divider .cube,
+    .divider .cube > div {
+        transition: none;
+    }
+
     .header {
         font-size: 1.5em;
     }
