--- a/src/app/sections/ProjectCard.module.scss
+++ b/src/app/sections/ProjectCard.module.scss
@@ -15,6 +15,7 @@
 
 .border {
     @include position(0, 0, 0, 0);
+    transform: translate(0, 0);
     position: absolute;
     z-index: -1;
 
@@ -125,6 +126,10 @@
         transition: none !important;
         filter: none !important;
         font-size: 0.85em;
+    }
+
+    .openIndicator {
+        display: none;
     }
 
     .description {
