--- a/src/styles/global/_reset.scss
+++ b/src/styles/global/_reset.scss
@@ -25,12 +25,3 @@ body {
     scrollbar-width: none;
     background: var(--c-background);
 }
-
-/* Safari isn't really sure which element should be used to display a scroll bar */
-html {
-    overflow: auto;
-}
-
-body {
-    position: absolute;
-}
